<resources>
    <string name="app_name">Where Am I?</string>
    <string name="submit_button">Submit</string>
    <string name="answer_hint">Answer</string>
    <!-- This is the India section. -->
    <string name="india_title">India (Taj Mahal)</string>
    <string name="india_info">The Taj Mahal is an ivory-white marble mausoleum on the south bank of
        the Yamuna river in India. It was commissioned in 1632 by the Mughal
        emperor, Shah Jahan, to house the tomb of his favourite wife, Mumtaz Mahal. The tomb is the
        centrepiece of a 17-hectare complex, which includes a mosque and a guest house,
        and is set in formal gardens bounded on three sides by a crenellated wall.</string>
    <string name="india_question">What is the name of the city where we can find the Taj Mahal in
        India?</string>
    <string name="india_radio_1">Bangalore</string>
    <string name="india_radio_2">Agra</string>
    <string name="india_radio_3">Mumbai</string>
    <!-- This is the Brazil section. -->
    <string name="brazil_title">Brazil (Christ the Redeemer)</string>
    <string name="brazil_info">Christ the Redeemer is an Art Deco statue of Jesus Christ in Rio de
        Janeiro, Brazil, created by French sculptor Paul Landowski and built by Brazilian engineer
        Heitor da Silva Costa, in collaboration with French engineer Albert Caquot. Romanian
        sculptor Gheorghe Leonida fashioned the face. The statue was constructed between 1922
        and 1931.</string>
    <string name="brazil_question">What is the real dimensions of the Christ the Redeemer statue in
        Brazil? (Please select width and height) </string>
    <string name="brazil_checkbox_1">28 metres wide</string>
    <string name="brazil_checkbox_2">118 meters wide</string>
    <string name="brazil_checkbox_3">38 metres high</string>
    <string name="brazil_checkbox_4">128 meters high</string>
    <!-- This is the London section. -->
    <string name="london_title">London (Big Ben)</string>
    <string name="london_info">Big Ben is the nickname for the Great Bell of the clock at the north
        end of the Palace of Westminster in London and is usually extended to refer to both the
        clock and the clock tower. The official name of the tower in which Big Ben is located was
        originally the Clock Tower, but it was renamed in 2012 to mark the Diamond
        Jubilee of Elizabeth II.</string>
    <string name="london_question">What is the real name of the Big Ben tower? Please type your
        answer below.</string>
    <!-- This is the Australia section. -->
    <string name="australia_title">Australia (Sydney Opera House)</string>
    <string name="australia_info">The Sydney Opera House is a
        multi-venue performing arts centre in Sydney, New South Wales, Australia. It is one of the
        20th century\'s most famous and distinctive buildings. The building was formally opened on
        20 October 1973.</string>
    <string name="australian_question">Who was the architect that designed the
        Sydney Opera House?</string>
    <string name="australian_radio_1">Bjarke Ingels</string>
    <string name="australian_radio_2">C. F. Møller</string>
    <string name="australian_radio_3">Jørn Utzon</string>
    <!-- This is the Tanzania section. -->
    <string name="tanzania_title">Tanzania (Mount Kilimanjaro)</string>
    <string name="tanzania_info">Mount Kilimanjaro or just
        Kilimanjaro, with its three volcanic cones is a dormant
        volcano in Tanzania. It is the highest mountain in Africa, about 4,900 metres (16,100 ft)
        from its base to 5,895 metres (19,341 ft) above sea level.</string>
    <string name="tanzania_question">What is the names of the three volcanic cones of mount
        Kilimanjaro?</string>
    <string name="tanzania_checkbox_1">Nongomo</string>
    <string name="tanzania_checkbox_2">Mawenzi</string>
    <string name="tanzania_checkbox_3">Shira</string>
    <string name="tanzania_checkbox_4">Kibo</string>
    <!-- This is the USA section. -->
    <string name="usa_title">United States (Mount Rushmore)</string>
    <string name="usa_info">Mount Rushmore National Memorial is a
        sculpture carved into the granite face of Mount Rushmore, a batholith in the Black Hills in
        Keystone, United States. Sculptor Gutzon Borglum created the sculpture\'s
        design and oversaw the project\'s execution from 1927 to 1941 with the help of his son,
        Lincoln Borglum. Mount Rushmore features 60-foot (18 m) sculptures of the heads of four
        United States presidents: George Washington (1732–1799), Thomas Jefferson (1743–1826),
        Theodore Roosevelt (1858–1919), and Abraham Lincoln (1809–1865). The memorial park covers
        1,278.45 acres (2.00 sq mi; 5.17 km2) and is 5,725 feet (1,745 m) above sea level..</string>
    <string name="usa_question">In which state of the USA can we find Mount Rushmore?</string>
    <!-- This is the Egypt section. -->
    <string name="egypt_title">Egypt (Egyptian pyramids)</string>
    <string name="egypt_info">The Egyptian pyramids are ancient pyramid-shaped masonry structures
        located in Egypt. As of November 2008, sources cite either 118 or 138 as the number of
        identified Egyptian pyramids.  Most were built as tombs for the country\'s pharaohs and
        their consorts during the Old and Middle Kingdom periods. The earliest known Egyptian
        pyramids are found at Saqqara, northwest of Memphis. This pyramid and its surrounding
        complex were designed by the architect Imhotep, and are generally considered to be the
        world\'s oldest monumental structures constructed of dressed masonry.</string>
    <string name="egypt_question">When were the Pyramid of Djoser constructed </string>
    <string name="egypt_radio_1">2630 BC–2611 BC</string>
    <string name="egypt_radio_2">1967 BC–1946 BC</string>
    <string name="egypt_radio_3">560 BC-541 BC</string>
    <!-- This is the France section. -->
    <string name="france_title">France (Eiffel Tower)</string>
    <string name="france_info">The Eiffel Tower is a wrought iron lattice tower on the Champ de
        Mars in Paris, France. It is named after the engineer Gustave Eiffel, whose company
        designed and built the tower. Constructed from 1887–89 as the entrance to the 1889
        World\'s Fair, it was initially criticized by some of France\'s leading artists and
        intellectuals for its design, but it has become a global cultural icon of France and one of
        the most recognisable structures in the world. The Eiffel Tower is the most-visited paid
        monument in the world; 6.91 million people ascended it in 2015.</string>
    <string name="france_question">Select all the true facts about the Eiffel Tower</string>
    <string name="france_checkbox_1">125 m squared</string>
    <string name="france_checkbox_2">91-storeys high</string>
    <string name="france_checkbox_3">324 m tall</string>
    <string name="france_checkbox_4">top platform is 576 m above the ground</string>
    <!-- This is the Zimbabwe section. -->
    <string name="zimbabwe_title">Zimbabwe (Victoria Falls)</string>
    <string name="zimbabwe_info">Victoria Falls is a waterfall in southern Africa at the
        border between Zambia and Zimbabwe. It is clearly visible from the Zimbabwean side, which
        also has the town Victoria Falls named after the falls.</string>
    <string name="zimbabwe_question">On which river can we find the Victoria Falls?</string>
    <!-- This is the Italy section. -->
    <string name="italy_title">Italy (Leaning Tower of Pisa)</string>
    <string name="italy_info">The Leaning Tower of Pisa or simply the Tower of Pisa is the
        campanile, or freestanding bell tower, of the cathedral of the Italian city of Pisa, known
        worldwide for its unintended tilt. The tower is situated behind the Pisa Cathedral.</string>
    <string name="italy_question">Which is the oldest structure in the Cathedral Square?</string>
    <string name="italy_radio_1">The Tower</string>
    <string name="italy_radio_2">Pisa Baptistry</string>
    <string name="italy_radio_3">The Cathedral</string>
    <!-- This is the Russia section. -->
    <string name="russia_title">Russia (Saint Basil\'s Cathedral)</string>
    <string name="russia_info">The Cathedral of Vasily the Blessed, commonly known as Saint
        Basil\'s Cathedral, is a church in Red Square in Moscow, Russia. The building, now a
        museum, is officially known as the Cathedral of the Intercession of the Most Holy Theotokos
        on the Moat or Pokrovsky Cathedral. It was built from 1555–1561 on orders from Ivan the
        Terrible. It was the city\'s tallest building until the completion of the Ivan the Great
        Bell Tower in 1600.</string>
    <string name="russia_question">The cathedral commemorates the capture
        of ______ and ______ </string>
    <string name="russia_checkbox_1">Viktar</string>
    <string name="russia_checkbox_2">Kazan</string>
    <string name="russia_checkbox_3">Astrakhan</string>
    <string name="russia_checkbox_4">Borys</string>
    <!-- This is the England section. -->
    <string name="england_title">England (Stonehenge)</string>
    <string name="england_info">Stonehenge is a prehistoric monument in England,
        2 miles (3 km) west of Amesbury. It consists of a ring of standing stones, with each
        standing stone around 13 feet (4.0 m) high, 7 feet (2.1 m) wide and weighing around 25 tons.
        The stones are set within earthworks in the middle of the most dense complex of Neolithic
        and Bronze Age monuments in England, including several hundred burial mounds.</string>
    <string name="england_question">In which county in England can we find Stonehenge?</string>

</resources>
